Created new pipeline files for zenml pipelines

--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -384,11 +384,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "aaa8fb3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Weekly_Sales</th>\n",
+       "      <th>Holiday_Flag</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Fuel_Price</th>\n",
+       "      <th>CPI</th>\n",
+       "      <th>Unemployment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>625</th>\n",
+       "      <td>5</td>\n",
+       "      <td>11-02-2011</td>\n",
+       "      <td>311590.54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.25</td>\n",
+       "      <td>3.022</td>\n",
+       "      <td>213.494463</td>\n",
+       "      <td>6.634</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Store        Date  Weekly_Sales  Holiday_Flag  Temperature  Fuel_Price  \\\n",
+       "625      5  11-02-2011     311590.54             1        38.25       3.022   \n",
+       "\n",
+       "            CPI  Unemployment  \n",
+       "625  213.494463         6.634  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "e475b72b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# how to read describe for outliers"
+   ]
   },
   {
    "cell_type": "markdown",
